--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--find-links wheelhouse
 aiohttp==3.7.2
 async-timeout==3.0.1
 attrs==20.2.0
@@ -6,7 +7,7 @@ certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
 IPy==1.0
-meraki==0.110.3
+meraki==1.2.0
 multidict==5.0.0
 requests==2.24.0
 typing-extensions==3.7.4.3
