update python requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
 aiohttp==3.7.2
 async-timeout==3.0.1
 attrs==20.2.0
+azf_wsgi==0.3.1
+Authlib==0.15.2
 azure-functions==1.4.0
+bundlebuilder @ git+https://github.com/CiscoSecurity/tr-05-ctim-bundle-builder.git@9d9f10a75cd57dd9e74dcbd34eda988ab241959c
 certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
+click==7.1.2
+cryptography==3.2.1
+Flask==1.1.2
 idna==2.10
-IPy==1.0
+inflection==0.5.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+marshmallow==3.8.0
 meraki
 multidict==5.0.0
+pycparser==2.20
+python-dateutil==2.8.1
 requests==2.24.0
+six==1.15.0
 typing-extensions==3.7.4.3
 urllib3==1.25.11
+Werkzeug==1.0.1
 yarl==1.6.2
