--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.7.2
 async-timeout==3.0.1
 attrs==20.2.0
-azf_wsgi==0.3.1
+azf_wsgi
 Authlib==0.15.2
 azure-functions==1.4.0
 bundlebuilder @ git+https://github.com/CiscoSecurity/tr-05-ctim-bundle-builder.git@9d9f10a75cd57dd9e74dcbd34eda988ab241959c
